--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Covid-SAFE@Frontiera</title>
+    <title>Covid-SAFE@Frontieră</title>
     <script src="https://cdn.polyfill.io/v3/polyfill.min.js?features=default,Promise,Array.prototype.entries,Array.prototype.filter,Array.prototype.includes,Array.prototype.lastIndexOf,Array.prototype.map,Array.prototype.values,document,fetch,JSON,localStorage,Map,Object.assign,Object.entries,Set,String.prototype.includes"></script>
   </head>
   <body>
