--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,43 @@
       name="description"
       content="Website realizat de Citizen Next - citizennext.ro"
     />
+    <meta
+      name="robots"
+      content="max-snippet:-1, max-image-preview:large, max-video-preview:-1"
+    />
+    <link rel="canonical" href="%PUBLIC_URL%" />
+    <meta property="og:locale" content="ro_RO" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Covid-SAFE@Frontieră" />
+    <meta
+      property="og:description"
+      content="Această aplicație este pusă la dispoziție de Guvernul României și stă la baza declarației de intrare în țară la punctele vamale, urmare a pandemiei de coronavirus COVID-19."
+    />
+    <meta property="og:url" content="%PUBLIC_URL%" />
+    <meta property="og:site_name" content="Covid-SAFE@Frontieră" />
+    <meta
+      property="og:image"
+      content="https://cdn.citizennext.ro/projects/covid-safe-frontiera/covid-safe-frontiera-banner-1.png"
+    />
+    <meta
+      property="og:image:secure_url"
+      content="https://cdn.citizennext.ro/projects/covid-safe-frontiera/covid-safe-frontiera-banner-1.png"
+    />
+    <meta property="og:image:width" content="1280" />
+    <meta property="og:image:height" content="720" />
+    <meta
+      name="twitter:card"
+      content="https://cdn.citizennext.ro/projects/covid-safe-frontiera/covid-safe-frontiera-banner-1.png"
+    />
+    <meta
+      name="twitter:description"
+      content="Această aplicație este pusă la dispoziție de Guvernul României și stă la baza declarației de intrare în țară la punctele vamale, urmare a pandemiei de coronavirus COVID-19."
+    />
+    <meta name="twitter:title" content="Covid-SAFE@Frontieră  " />
+    <meta
+      name="twitter:image"
+      content="https://cdn.citizennext.ro/projects/covid-safe-frontiera/covid-safe-frontiera-banner-1.png"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.svg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
