--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       content="Această aplicație este pusă la dispoziție de Guvernul României și stă la baza declarației de intrare în țară la punctele vamale, urmare a pandemiei de coronavirus COVID-19."
     />
     <meta property="og:url" content="%PUBLIC_URL%" />
+    <meta property="fb:app_id" content="1266808200423388" />
     <meta property="og:site_name" content="Covid-SAFE@Frontieră" />
     <meta
       property="og:image"
@@ -36,10 +37,7 @@
     />
     <meta property="og:image:width" content="1280" />
     <meta property="og:image:height" content="720" />
-    <meta
-      name="twitter:card"
-      content="https://cdn.citizennext.ro/projects/covid-safe-frontiera/covid-safe-frontiera-banner-1.png"
-    />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:description"
       content="Această aplicație este pusă la dispoziție de Guvernul României și stă la baza declarației de intrare în țară la punctele vamale, urmare a pandemiei de coronavirus COVID-19."
